--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -7,6 +7,7 @@
     <script src="../../web-component-tester/browser.js"></script>
     <script src="../../iron-test-helpers/test-helpers.js"></script>
     <script src="../../iron-test-helpers/mock-interactions.js"></script>
+    <link rel="import" href="../../arc-polyfills/arc-polyfills.html">
     <link rel="import" href="../response-view.html">
   </head>
   <body>
