--- a/test/index.html
+++ b/test/index.html
@@ -11,7 +11,8 @@
       /* global WCT */
       // Load and run all tests (.html, .js):
       WCT.loadSuites([
-        'basic-test.html'
+        'basic-test.html',
+        'advanced-response-data-test.html'
       ]);
     </script>
   </body>
