--- a/test/advanced-response-data-test.html
+++ b/test/advanced-response-data-test.html
@@ -20,7 +20,7 @@
 
     <script>
 
-    suite('Error response', () => {
+    suite('Advanced data', () => {
       const request = {
         url: 'https://domain.com/',
         method: 'GET',
