--- a/response-view.html
+++ b/response-view.html
@@ -102,7 +102,8 @@ the License.
    * array.
    * - timings `Object` - HAR 1.2 timings object
    *
-   * Read [response-status-view](https://elements.advancedrestclient.com/elements/response-status-view)
+   * Read [response-status-view]
+   * (https://elements.advancedrestclient.com/elements/response-status-view)
    * element documentation for more details.
    *
    * ## Error reporting
@@ -128,7 +129,7 @@ the License.
    * @memberof ApiElements
    */
   class ResponseView extends Polymer.Element {
-    static get is() { return 'response-view'; }
+    static get is() {return 'response-view';}
     static get properties() {
       return {
         /**
@@ -249,7 +250,7 @@ the License.
          */
         hasResponse: {
           type: Boolean,
-          value: false,
+          value: true,
           computed: '_computeHasResponse(request)'
         },
         /**
@@ -356,6 +357,7 @@ the License.
      * If the request method is `HEAD` then it never can have response.
      *
      * @param {Object} request ARC request object.
+     * @return {Boolean}
      */
     _computeHasResponse(request) {
       if (request && request.method === 'HEAD') {
