--- a/demo/index.html
+++ b/demo/index.html
@@ -5,17 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
   <title>response-view demo</title>
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="../../polymer/lib/elements/dom-bind.html">
-  <link rel="import" href="../../xhr-simple-request/xhr-simple-request.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-  <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-  <link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
-  <link rel="import" href="../../paper-input/paper-input.html">
-  <link rel="import" href="../../paper-button/paper-button.html">
-  <link rel="import" href="../../paper-icon-button/paper-icon-button.html">
-  <link rel="import" href="../../paper-toast/paper-toast.html">
-  <link rel="import" href="../response-view.html">
+  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
+
   <custom-style>
     <style is="custom-style" include="demo-pages-shared-styles">
     .url-input {
@@ -29,25 +20,30 @@
 </head>
 <body unresolved>
   <div class="vertical-section-container centered">
-    <h3>The `response-view`</h3>
-    <demo-snippet>
-      <template>
-        <dom-bind id="demo">
-          <template is="dom-bind">
-            <div class="url-input">
-              <paper-input label="URL" value="{{url}}"></paper-input>
-              <paper-button raised on-tap="download">go</paper-button>
-            </div>
-            <response-view request="[[request]]" response="[[response]]" loading-time="[[loadingTime]]" is-xhr is-error="[[isError]]" response-error="[[responseError]]"></response-view>
-          </template>
-        </dom-bind>
+    <h3>The response-view</h3>
+    <dom-bind id="demo">
+      <template is="dom-bind">
+        <div class="url-input">
+          <paper-input label="URL" value="{{url}}"></paper-input>
+          <paper-button raised="" on-tap="download">go</paper-button>
+        </div>
+        <response-view request="[[request]]" response="[[response]]" loading-time="[[loadingTime]]" is-xhr="" is-error="[[isError]]" response-error="[[responseError]]"></response-view>
       </template>
-    </demo-snippet>
+    </dom-bind>
     <paper-toast text=""></paper-toast>
     <xhr-simple-request></xhr-simple-request>
   </div>
-  <script>
-  window.addEventListener('WebComponentsReady', () => {
+  <script type="module">
+    import '../../../@polymer/polymer/lib/elements/dom-bind.js';
+    import '../../../@advanced-rest-client/xhr-simple-request/xhr-simple-request.js';
+    import '../../../@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
+    import '../../../@polymer/iron-demo-helpers/demo-snippet.js';
+    import '../../../@polymer/iron-flex-layout/iron-flex-layout.js';
+    import '../../../@polymer/paper-input/paper-input.js';
+    import '../../../@polymer/paper-button/paper-button.js';
+    import '../../../@polymer/paper-icon-button/paper-icon-button.js';
+    import '../../../@polymer/paper-toast/paper-toast.js';
+    import '../response-view.js';
     const scope = document.getElementById('demo');
     scope.url = 'https://cdn.rawgit.com/jarrodek/ChromeRestClient/develop/tasks/test-data/xml1.xml';
     // scope.url = 'https://raw.githubusercontent.com/jarrodek/ChromeRestClient/develop/tasks/test-data/json2.json';
@@ -78,7 +74,6 @@
         detail: detail
       }));
     };
-  });
   </script>
 </body>
 </html>
