--- a/test/advanced-response-data-test.html
+++ b/test/advanced-response-data-test.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../../web-component-tester/browser.js"></script>
-    <script src="../../iron-test-helpers/test-helpers.js"></script>
-    <script src="../../iron-test-helpers/mock-interactions.js"></script>
-    <link rel="import" href="../../arc-polyfills/arc-polyfills.html">
-    <link rel="import" href="../response-view.html">
+
+    <script src="../node_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="../node_modules/@polymer/test-fixture/test-fixture.js"></script>
+    <script src="../node_modules/mocha/mocha.js"></script>
+    <script src="../node_modules/chai/chai.js"></script>
+    <script src="../node_modules/wct-mocha/wct-mocha.js"></script>
+
   </head>
   <body>
 
@@ -18,8 +19,8 @@
       </template>
     </test-fixture>
 
-    <script>
-
+    <script type="module">
+    import '../response-view.js';
     suite('Advanced data', () => {
       const request = {
         url: 'https://domain.com/',
@@ -83,7 +84,6 @@
       test('hasResponse is true', () => {
         assert.isTrue(element.hasResponse);
       });
-
     });
     </script>
   </body>
