--- a/demo/index.html
+++ b/demo/index.html
@@ -1,79 +1,104 @@
 <!doctype html>
-<html>
+<html lang="en-GB">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
   <title>response-view demo</title>
-  <script src="../../../@webcomponents/webcomponentsjs/webcomponents-bundle.js"></script>
 
-  <custom-style>
-    <style is="custom-style" include="demo-pages-shared-styles">
+  <style>
     .url-input {
-      @apply --layout-horizontal;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
     }
-    .url-input paper-input {
-      @apply --layout-flex;
+
+    .url-input anypoint-input {
+      flex: 1;
     }
-    </style>
-  </custom-style>
+  </style>
 </head>
-<body unresolved>
-  <div class="vertical-section-container centered">
-    <h3>The response-view</h3>
-    <dom-bind id="demo">
-      <template is="dom-bind">
-        <div class="url-input">
-          <paper-input label="URL" value="{{url}}"></paper-input>
-          <paper-button raised="" on-tap="download">go</paper-button>
-        </div>
-        <response-view request="[[request]]" response="[[response]]" loading-time="[[loadingTime]]" is-xhr="" is-error="[[isError]]" response-error="[[responseError]]"></response-view>
-      </template>
-    </dom-bind>
-    <paper-toast text=""></paper-toast>
-    <xhr-simple-request></xhr-simple-request>
-  </div>
+<body>
+  <div id="demo"></div>
+
+  <xhr-simple-request></xhr-simple-request>
   <script type="module">
-    import '../../../@polymer/polymer/lib/elements/dom-bind.js';
-    import '../../../@advanced-rest-client/xhr-simple-request/xhr-simple-request.js';
-    import '../../../@polymer/iron-demo-helpers/demo-pages-shared-styles.js';
-    import '../../../@polymer/iron-demo-helpers/demo-snippet.js';
-    import '../../../@polymer/iron-flex-layout/iron-flex-layout.js';
-    import '../../../@polymer/paper-input/paper-input.js';
-    import '../../../@polymer/paper-button/paper-button.js';
-    import '../../../@polymer/paper-icon-button/paper-icon-button.js';
-    import '../../../@polymer/paper-toast/paper-toast.js';
-    import '../response-view.js';
-    const scope = document.getElementById('demo');
-    scope.url = 'https://cdn.rawgit.com/jarrodek/ChromeRestClient/develop/tasks/test-data/xml1.xml';
-    // scope.url = 'https://raw.githubusercontent.com/jarrodek/ChromeRestClient/develop/tasks/test-data/json2.json';
-    let requestId = 0;
+  import { html, render } from 'lit-html';
+  import '@advanced-rest-client/arc-demo-helper/arc-demo-helper.js';
+  import '@anypoint-web-components/anypoint-input/anypoint-input.js';
+  import '@anypoint-web-components/anypoint-button/anypoint-button.js';
+  import '@anypoint-web-components/anypoint-styles/colors.js';
+  import '@advanced-rest-client/xhr-simple-request/xhr-simple-request.js';
+  import '../response-view.js';
 
-    window.addEventListener('api-response', (e) => {
-      scope.request = e.detail.request;
-      scope.response = e.detail.response;
-      scope.loadingTime = e.detail.loadingTime;
-      if (e.detail.isError) {
-        scope.isError = e.detail.isError;
-        scope.responseError = e.detail.error;
-      }
-    });
+  let requestId = 0;
+  let request;
+  let response;
+  let loadingTime;
+  let isError;
+  let responseError;
 
-    scope.download = function() {
-      scope.request = undefined;
-      scope.response = undefined;
-      scope.responseError = undefined;
-      scope.isError = false;
-      const detail = {
-        id: 'request' + (requestId ++),
-        url: scope.url,
-        method: 'GET'
-      };
-      document.body.dispatchEvent(new CustomEvent('api-request', {
-        bubbles: true,
-        detail: detail
-      }));
+  window.addEventListener('api-response', (e) => {
+    request = e.detail.request;
+    response = e.detail.response;
+    loadingTime = e.detail.loadingTime;
+    if (e.detail.isError) {
+      isError = e.detail.isError;
+      responseError = e.detail.error;
+    } else {
+      isError = false;
+      responseError = undefined;
+    }
+
+    _renderView();
+  });
+
+  let url = './test.html';
+  async function download() {
+    request = undefined;
+    response = undefined;
+    responseError = undefined;
+    isError = false;
+    const detail = {
+      id: 'request' + (requestId ++),
+      url: url,
+      method: 'GET'
     };
+    document.body.dispatchEvent(new CustomEvent('api-request', {
+      bubbles: true,
+      detail: detail
+    }));
+  }
+
+  function updateUrl(e) {
+    url = e.detail.value;
+  }
+
+  function _renderView() {
+    render(
+      html`
+      <section role="main" class="vertical-section-container centered">
+        <h1>The response-view</h1>
+
+        <div class="url-input">
+          <anypoint-input label="URL" .value="${url}" @value-changed="${updateUrl}">
+            <label slot="label">URL</label>
+          </anypoint-input>
+          <anypoint-button emphasis="high" @click="${download}">go</anypoint-button>
+        </div>
+
+        <response-view
+          .request="${request}"
+          .response="${response}"
+          .loadingTime="${loadingTime}"
+          isxhr
+          .isError="${isError}"
+          .responseError="${responseError}"></response-view>
+      `,
+      document.querySelector('#demo')
+    );
+  }
+  _renderView();
   </script>
 </body>
 </html>
